# world_simulator

./: Animal.cpp  Animal.h  CMakeLists.txt  CMakePresets.json  Carnivore.cpp  Carnivore.h  Grass.cpp  Grass.h  Herbivore.cpp  Herbivore.h  Map.cpp  Map.h  Organism.cpp  Organism.h  OrganismsManager.cpp  OrganismsManager.h  Plant.cpp  Plant.h  Sheep.cpp  Sheep.h  Wolf.cpp  Wolf.h  WorldSimulator.cpp  WorldSimulator.h  main.cpp
